crates/nx-syntax/tests/fixtures/invalid/braced-value-sequence-requires-parens.nx
let invalid = {a + b c}
